one more fix for talk bubble alignment

--- a/myfedora/public/css/planet-fedora-bubbles.css
+++ b/myfedora/public/css/planet-fedora-bubbles.css
@@ -31,7 +31,7 @@ div.person-info a img {
 }
 
 div.post {
-  margin-left: 6.5em;
+  margin-left: 8em;
   margin-top: 2.2em;
   padding: .25em 1.5em;
   position: relative;
